# TanTu-golf-cart

./: .gitignore  LEARNING_NOTES.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/sample_videos/: README.md
exercises/01_state_machine_basics/: README.md  exercise.py
exercises/02_finger_count_classifier/: README.md  exercise.py
models/: README.md
src/golf_cart_vision/: __init__.py  main.py
src/golf_cart_vision/command_publisher/: __init__.py  mock_publisher.py
src/golf_cart_vision/config/: settings.py
src/golf_cart_vision/gesture_detector/: __init__.py  detection_types.py  event_stabilizer.py  hand_gesture_classifier.py  mediapipe_detector.py  mock_detector.py
src/golf_cart_vision/state_machine/: __init__.py  follow_state_machine.py
src/golf_cart_vision/video_input/: __init__.py  camera.py
src/golf_cart_vision/visualizer/: console_visualizer.py  opencv_visualizer.py
tests/: test_command_publisher.py  test_gesture_event_stabilizer.py  test_hand_gesture_classifier.py  test_state_machine.py
