[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tantu-golf-cart"
version = "0.1.0"
description = "TanTu Golf Cart MVP vision-following demo."
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
camera = [
  "opencv-python>=4.10.0",
]
gesture = [
  "mediapipe>=0.10.14",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
